// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "orchestrator/src/orchtestrator.proto";

package mz_storage.types.hosts;

message ProtoStorageHostResourceAllocation {
    optional mz_orchestrator.ProtoMemoryLimit memory_limit = 1;
    optional mz_orchestrator.ProtoCpuLimit cpu_limit = 2;
    uint64 workers = 3;
}

message ProtoStorageHostConfig {
    message ProtoStorageHostConfigRemote {
        string addr = 1;
    }

    message ProtoStorageHostConfigManaged {
        ProtoStorageHostResourceAllocation allocation = 1;
        string size = 2;
    }

    oneof kind {
        ProtoStorageHostConfigRemote remote = 1;
        ProtoStorageHostConfigManaged managed = 2;
    }
}
